前端适量调整

--- a/web/admin.html
+++ b/web/admin.html
@@ -42,7 +42,7 @@
               <!-- Navbar Header-->
               <div class="navbar-header">
                 <!-- Navbar Brand --><a href="index.html" class="navbar-brand d-none d-sm-inline-block">
-                  <div class="brand-text d-none d-lg-inline-block"><span>Bilobili </span><strong>Dashboard</strong></div>
+                  <div class="brand-text d-none d-lg-inline-block"><span>Mandarin </span><strong>Dashboard</strong></div>
                   <div class="brand-text d-none d-sm-inline-block d-lg-none"><strong>BD</strong></div></a>
                 <!-- Toggle Button--><a id="toggle-btn" href="#" class="menu-btn active"><span></span><span></span><span></span></a>
               </div>
@@ -692,7 +692,7 @@
             <div class="container-fluid">
               <div class="row">
                 <div class="col-sm-6">
-                  <p>Copyright &copy; 2019.Company name All rights reserved.More Templates <a href="http://www.cssmoban.com/" target="_blank" title="模板之家">模板之家</a> - Collect from <a href="http://www.cssmoban.com/" title="网页模板" target="_blank">网页模板</a></p>
+                  <p>Copyright &copy; 2019. <a href="http://www.cssmoban.com/" target="_blank" title=""></a> <a href="http://www.cssmoban.com/" title="" target="_blank"></a></p>
                 </div>
                 <div class="col-sm-6 text-right">
                   <p></p>
