--- a/web/register.html
+++ b/web/register.html
@@ -73,7 +73,7 @@
         </div>
       </div>
       <div class="copyrights text-center">
-        <p>Copyright &copy; 2019.Company name All rights reserved.More Templates <a href="http://www.cssmoban.com/" target="_blank" title="模板之家">模板之家</a> - Collect from <a href="http://www.cssmoban.com/" title="网页模板" target="_blank">网页模板</a></p>
+        <p>Copyright &copy; 2019. <a href="http://www.cssmoban.com/" target="_blank" title=""></a> <a href="http://www.cssmoban.com/" title="" target="_blank"></a></p>
       </div>
     </div>
     <!-- JavaScript files-->
