--- a/web/login.html
+++ b/web/login.html
@@ -46,6 +46,7 @@
                     <div class="form d-flex align-items-center">
                         <div class="content">
                             <form method="post" class="form-validate">
+                            <form method="post" class="form-validate">
                                 <div class="form-group">
                                     <input id="login-username" type="text" name="loginUsername" required data-msg="Please enter your username" class="input-material">
                                     <label for="login-username" class="label-material">User Name</label>
