--- a/web/tables.html
+++ b/web/tables.html
@@ -65,7 +65,9 @@
                                         <div class="notification-content"><i class="fa fa-envelope bg-green"></i>You
                                             have 6 new messages
                                         </div>
-                                        <div class="notification-time"><small>4 minutes ago</small></div>
+                                        <div class="notification-time">
+                                            <small>4 minutes ago</small>
+                                        </div>
                                     </div>
                                 </a></li>
                                 <li><a rel="nofollow" href="#" class="dropdown-item">
@@ -73,7 +75,9 @@
                                         <div class="notification-content"><i class="fa fa-twitter bg-blue"></i>You have
                                             2 followers
                                         </div>
-                                        <div class="notification-time"><small>4 minutes ago</small></div>
+                                        <div class="notification-time">
+                                            <small>4 minutes ago</small>
+                                        </div>
                                     </div>
                                 </a></li>
                                 <li><a rel="nofollow" href="#" class="dropdown-item">
@@ -81,7 +85,9 @@
                                         <div class="notification-content"><i class="fa fa-upload bg-orange"></i>Server
                                             Rebooted
                                         </div>
-                                        <div class="notification-time"><small>4 minutes ago</small></div>
+                                        <div class="notification-time">
+                                            <small>4 minutes ago</small>
+                                        </div>
                                     </div>
                                 </a></li>
                                 <li><a rel="nofollow" href="#" class="dropdown-item">
@@ -89,7 +95,9 @@
                                         <div class="notification-content"><i class="fa fa-twitter bg-blue"></i>You have
                                             2 followers
                                         </div>
-                                        <div class="notification-time"><small>10 minutes ago</small></div>
+                                        <div class="notification-time">
+                                            <small>10 minutes ago</small>
+                                        </div>
                                     </div>
                                 </a></li>
                                 <li><a rel="nofollow" href="#" class="dropdown-item all-notifications text-center">
